--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
         "psr-4": {
             "Odoo\\ConnectorBundle\\":"src/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
     }
-
 }
